# ract

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  log
README/: gen_ui.md  makepad.md
locales/: en_US.toml  zh_CN.toml
src/: main.rs
src/app/: dashboard.rs  input.rs  list.rs  mod.rs  select.rs  state.rs  tab.rs  timeline.rs  unicode.rs
src/cli/: mod.rs
src/cli/command/: check.rs  config.rs  create.rs  init.rs  install.rs  mod.rs  studio.rs  uninstall.rs  update.rs  wasm.rs
src/common/: constant.rs  fs.rs  mod.rs
src/core/: cli.rs  constant.rs  mod.rs  util.rs
src/core/command/: check.rs  config.rs  init.rs  mod.rs  package.rs
src/core/compiler/: mod.rs
src/core/entry/: check.rs  config.rs  framwork.rs  mod.rs  project.rs  project_type.rs  tool.rs
src/core/env/: mod.rs
src/core/log/: add.rs  check.rs  compiler.rs  config.rs  create.rs  init.rs  install.rs  level.rs  mod.rs  other.rs  package.rs  run.rs  terminal.rs  wasm.rs
src/core/util/: env.rs  mod.rs  project.rs
src/entry/: check.rs  tool.rs
src/entry/compiler/: ract_toml.rs  target.rs
src/entry/config/: chain_env_toml.rs  env.rs  mod.rs
src/entry/package/: binary.rs  common.rs  conf.rs  dmg.rs  generator.rs  wix.rs
src/log/: add.rs  check.rs  compiler.rs  config.rs  create.rs  error.rs  init.rs  install.rs  level.rs  mod.rs  package.rs  run.rs  terminal.rs  uninstall.rs  wasm.rs
src/service/: mod.rs
src/service/add/: mod.rs
src/service/check/: item.rs  mod.rs
src/service/config/: mod.rs
tests/v0.0.1/: README.md
updates/: TODO.md  UPDATE.md
(+90 files in other folders)
