[package]
name = "ract"
version = "0.0.1"
edition = "2021"
authors = ["Will SHENG<syf20020816@outlook.com>"]
description = "Ract is a conversational CLI tool written in Rust, providing an all-in-one solution for integrating dependencies, setting up environments, generating project templates, running, and packaging projects with frameworks like GenUI and Makepad. Simplify your development workflow with minimal arguments and intuitive dialogs. 🚀"
license = "MIT"
repsitory = "https://github.com/Privoce/ract"
keys = ["makepad", "genui", "cli"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
inquire = "0.7.5"
gen_utils = { path = "../../../gen_ui/GenUI/gen/utils", default-features = false, features = [
    "compiler",
] }
toml_edit = "0.22.19"
which = "7.0.0"
chrono = "0.4.38"
makepad_gen_plugin = { path = "../../../gen_ui/GenUI/gen/generator/makepad" }
log = "0.4.22"
notify = "7.0.0"
env_logger = "0.11.5"
sha2 = "0.10.8"
# tokio = { version = "1.37.0", features = ["full"] }